syntax = "proto3";

option go_package = "ep-bridge-service/internal/genproto/peer";

service PeerService {
  rpc GetPeer(GetPeerRequest) returns (GetPeerResponse) {}
}

message GetPeerRequest {
  string user_id = 1;
}

message GetPeerResponse {
  string user_id = 1;
  string profile_photo = 2;
  bool online_status = 3;
  string bio = 4;
  string overall_score = 5;
  repeated string interests = 6;
}
