syntax = "proto3";
// import "google/protobuf/wrappers.proto";
option go_package = "ep-bridge-service/internal/genproto/resource";

message Post{
 string id = 1;
 string sender_id =2;
 string content = 3;
 string room_id = 4;
 string created_at =5; 
}

message PostsRequest {
  string room_id = 1; 
//   google.protobuf.Int32Value pageSize = 2;
//   google.protobuf.Int32Value pageNumber = 3;
}

message PostsReply {    
  repeated Post posts=1;
}

service PostsService {
  rpc GetPosts (PostsRequest) returns (PostsReply);
}
